Add song lyrics page for "Golden" by HUNTR/X and related resources
- Created golden.html with lyrics and interpretations.
- Added main.css for styling the lyrics page.
- Created table.html for a song list with links to lyrics pages.
- Added contact.html for Little Taco Shop with a contact form.
- Implemented index.html for Little Taco Shop with navigation and sections.
- Added various resources including images and SVG icons.
- Included learning notes for HTML and Fullstack Development.

--- a/html-css/00 simple-song-lyrics-site/boom.html
+++ b/html-css/00 simple-song-lyrics-site/boom.html
@@ -7,8 +7,8 @@
     <meta name="artist" content="Evil Neuro">
     <meta name="description" content="Lyrics of Boom">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
-    <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../00 simple-song-lyrics-site/main.css" type="text/css">
+    <link rel="icon" href="../_resources/globe.svg" type="image/x-icon">
     <title>Boom - Evil Neuro</title>
 </head>
 
@@ -20,7 +20,7 @@
                     Neuro!</a></em></h3>
 
         <a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs" target="_blank">
-            <img src="../resources/pictures/evil_boom.jpg" alt="Evil Neuro - Boom Cover Picture" width="800"
+            <img src="../_resources/pictures/evil_boom.jpg" alt="Evil Neuro - Boom Cover Picture" width="800"
                 height="400">
         </a>
 
@@ -178,7 +178,7 @@
     </main>
 
     <footer>
-        <p><a href="../learning-01/table.html">Back to Table of Contents</a></p>
+        <p><a href="../00 simple-song-lyrics-site/table.html">Back to Table of Contents</a></p>
         Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius"
             target="_blank">Genius</a>.<br>
         Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
