--- a/html-css/00 simple-song-lyrics-site/chinatown-blues.html
+++ b/html-css/00 simple-song-lyrics-site/chinatown-blues.html
@@ -6,8 +6,8 @@
     <meta name="artist" content="ODDEEO">
     <meta name="description" content="Chinatown Blues (ft. Megpoid Gumi)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../00 simple-song-lyrics-site/main.css" type="text/css">
+    <link rel="icon" href="../_resources/globe.svg" type="image/x-icon">
     <title>Chinatown Blues - ODDEEO</title>
 </head>
 
@@ -20,7 +20,7 @@
 
         <a href="https://soundcloud.com/robkta/oddeeo-karma-wears-white-ties-megpoid-gumi-chinatown-blues-robkta-remix"
             target="_blank">
-            <img src="../resources/pictures/oddeo_chinatownblues.jpg" alt="ODDEO - Chinatown Blues Cover Picture"
+            <img src="../_resources/pictures/oddeo_chinatownblues.jpg" alt="ODDEO - Chinatown Blues Cover Picture"
                 width="800" height="800">
         </a>
 
@@ -167,7 +167,7 @@
 
     </main>
     <footer>
-        <p><a href="../learning-01/table.html">Back to Table of Contents</a></p>
+        <p><a href="../00 simple-song-lyrics-site/table.html">Back to Table of Contents</a></p>
         Lyrics sourced from <a href="https://genius.com/Oddeeo-chinatown-blues-lyrics" title="Genius"
             target="_blank">Genius</a>.<br>
         Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
