--- a/html-css/00 simple-song-lyrics-site/table.html
+++ b/html-css/00 simple-song-lyrics-site/table.html
@@ -7,8 +7,8 @@
     <meta name="author" content="UnlockTheCode">
     <meta name="description" content="This will contain all the things I learned from the HTML video.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../resources/home.png" type="image/x-icon">
-    <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
+    <link rel="icon" href="../_resources/home.png" type="image/x-icon">
+    <link rel="stylesheet" href="../00 simple-song-lyrics-site/main.css" type="text/css">
     <title>The Lyrics of Songs I Like</title>
 </head>
 
@@ -18,21 +18,21 @@
             <h1 id="table-of-songs">Table of Songs</h1>
             <ol>
                 <li>
-                    <a href="../learning-01/golden.html">Golden</a>
+                    <a href="../00 simple-song-lyrics-site/golden.html">Golden</a>
                 </li>
 
                 <li>
-                    <a href="../learning-01/boom.html">Boom</a>
+                    <a href="../00 simple-song-lyrics-site/boom.html">Boom</a>
                 </li>
 
                 <li>
-                    <a href="../learning-01/chinatown-blues.html">Chinatown Blues</a>
+                    <a href="../00 simple-song-lyrics-site/chinatown-blues.html">Chinatown Blues</a>
                 </li>
             </ol>
         </nav>
 
-        <a rel="noopener" href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
-            <img src="../resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300"
+        <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
+            <img src="../_resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300"
                 height="300">
         </a>
 
