--- a/html-css/01 little-taco-shop/contact.html
+++ b/html-css/01 little-taco-shop/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Little Taco Shop</title>
     <link rel="stylesheet" href="../little-taco-shop/contact.css">
-    <link rel="shortcut icon" href="/resources/globe.svg">
+    <link rel="shortcut icon" href="/_resources/globe.svg">
 </head>
 
 <body>
