--- a/html-css/00 simple-song-lyrics-site/golden.html
+++ b/html-css/00 simple-song-lyrics-site/golden.html
@@ -7,8 +7,8 @@
     <meta name="artist" content="HUNTR/X">
     <meta name="description" content="Lyrics of Golden">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
-    <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../00 simple-song-lyrics-site/main.css" type="text/css">
+    <link rel="icon" href="../_resources/globe.svg" type="image/x-icon">
     <title>Golden - HUNTR/X</title>
 </head>
 
@@ -21,7 +21,7 @@
 
         <a href="https://images.complex.com/complex/image/upload/c_crop,h_1081,w_1920,x_0,y_0/g_xy_center,x_960,y_541,q_auto,f_auto,c_fill,ar_1.78,w_2048/sanity-new/golden_huntrix_kpop_demon_hunters_ejae_audri_nuna_rei_ami_sxhvil"
             target="_blank">
-            <img src="../resources/pictures/kpopdemonhunters_golden.webp"
+            <img src="../_resources/pictures/kpopdemonhunters_golden.webp"
                 alt="Kpop Demon Hunters - Golden Cover Picture" width="800" height="400">
         </a>
         <hr>
@@ -201,7 +201,7 @@
         <hr>
     </main>
     <footer>
-        <p><a href="../learning-01/table.html">Back to Table of Contents</a></p>
+        <p><a href="../00 simple-song-lyrics-site/table.html">Back to Table of Contents</a></p>
         Lyrics sourced from <a
             href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics"
             title="Genius" target="_blank">Genius</a>.<br>
