Update LinkedIn profile link in personal website and enhance deployment notes in learning notes

--- a/fullstack-scrimba/html-css/Introduction to HTML/challenges/summative_challenges/manlutacpersonalwebsite/index.html
+++ b/fullstack-scrimba/html-css/Introduction to HTML/challenges/summative_challenges/manlutacpersonalwebsite/index.html
@@ -26,7 +26,7 @@
         </ul>
 
         <h2>Contact Me</h2>
-        <p>You can contact me via my <a href="https://www.linkedin.com/in/mennard-ezekiel-m-manlutac-a46778324/">LinkedIn</a> profile.</p>
+        <p>You can contact me via my <a href="https://www.linkedin.com/in/manlutacmennard">LinkedIn</a> profile.</p>
 
         <form>
             <input type="email" placeholder="Enter your email">
